# httpui

./: Cargo.toml  test.http
httpfile/: Cargo.toml  test.http
httpfile/src/parser/: mod.rs
httpui/: Cargo.toml
httpui/src/: args.rs  main.rs  ui.rs
httpui/src/lib/: mod.rs
httpui/src/lib/mvc/: controller.rs  mod.rs  model.rs  view.rs
httpui/src/lib/widgets/: mod.rs
httpui/src/mvc/: controller.rs  model.rs  view.rs
httpui/src/widgets/: list.rs  spinner.rs
src/parser/: mod.rs
