[package]
name = "httpui"
version = "0.1.0"
edition = "2021"

[lib]
name = "httpui"
path = "src/lib/mod.rs"

[[bin]]
name = "httpui"
path = "src/main.rs"

[dependencies]
httpfile = { path = "../httpfile", features = ["reqwest"] }
tui = "0.18.0"
argh = "0.1.7"
crossterm = { version = "0.23.2", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.11" }
anyhow = "1.0.57"
